--- a/VinilosApp/app/src/main/res/layout/activity_menu.xml
+++ b/VinilosApp/app/src/main/res/layout/activity_menu.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#343F4B"
-    tools:context=".view.MenuActivity">
+    tools:context=".ui.MenuActivity">
 
     <TextView
         android:id="@+id/textView"
