--- a/app/src/main/res/layout/album_item.xml
+++ b/app/src/main/res/layout/album_item.xml
@@ -29,14 +29,14 @@
                     android:id="@+id/textView6"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="album.name"
+                    android:text="@{album.name}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Display3" />
 
                 <TextView
                     android:id="@+id/textView5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="album.description"
+                    android:text="@{album.description}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Display4" />
 
             </LinearLayout>
