--- a/app/src/main/res/layout/album_item.xml
+++ b/app/src/main/res/layout/album_item.xml
@@ -30,14 +30,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@{album.name}"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Display3" />
+                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
                 <TextView
                     android:id="@+id/textView5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@{album.description}"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Display4" />
+                    android:text="@{album.genre}"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
