Creacion vista consultar artistas

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -42,7 +42,7 @@
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="322dp"
         android:layout_height="46dp"
-        android:onClick="showArtists"
+        android:onClick="showMusicians"
         android:text="Artistas"
         android:textAlignment="viewStart"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -58,6 +58,7 @@
         android:layout_width="322dp"
         android:layout_height="46dp"
         android:layout_marginTop="24dp"
+        android:onClick="showCollectors"
         android:text="Coleccionistas"
         android:textAlignment="viewStart"
         app:layout_constraintBottom_toBottomOf="parent"
