--- a/app/src/main/res/layout/fragment_albums.xml
+++ b/app/src/main/res/layout/fragment_albums.xml
@@ -8,9 +8,10 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
+        android:layout_width="223dp"
+        android:layout_height="265dp"
+        android:progressDrawable="@android:drawable/ic_popup_sync"
         android:progressTint="#4CAF50"
         android:visibility="visible"
         tools:visibility="visible" />
