--- a/app/src/main/res/layout/activity_content_collectors.xml
+++ b/app/src/main/res/layout/activity_content_collectors.xml
@@ -24,7 +24,7 @@
         android:layout_height="495dp"
         app:defaultNavHost="true"
         app:layout_constraintTop_toBottomOf="@+id/textCollectorsTitle"
-        app:navGraph="@navigation/nav_graph"
+        app:navGraph="@navigation/nav_graph_collectors"
         tools:layout_editor_absoluteX="5dp" />
 
     <TextView
