--- a/app/src/main/res/layout/activity_content_musicians.xml
+++ b/app/src/main/res/layout/activity_content_musicians.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.activity_content_musicians">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/my_toolbar"
+        android:id="@+id/my_toolbar_musicians"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/teal_700"
@@ -24,7 +24,7 @@
         android:layout_height="495dp"
         app:defaultNavHost="true"
         app:layout_constraintTop_toBottomOf="@+id/textMusiciansTitle"
-        app:navGraph="@navigation/nav_graph"
+        app:navGraph="@navigation/nav_graph_musicians"
         tools:layout_editor_absoluteX="5dp" />
 
     <TextView
@@ -35,7 +35,11 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Display3"
         android:textColor="#F95F62"
         android:textStyle="italic"
-        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
-        tools:layout_editor_absoluteX="6dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/my_toolbar_musicians"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
