--- a/app/src/main/res/navigation/nav_graph_musicians.xml
+++ b/app/src/main/res/navigation/nav_graph_musicians.xml
@@ -2,7 +2,8 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/musicianFragment">
+    android:id="@+id/nav_graph_musicians"
+    app:startDestination="@id/musicianFragment">
     <fragment
         android:id="@+id/musicianFragment"
         android:name="com.miso.vinilosapp.ui.musicians"
