--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/albumFragment">
+    app:startDestination="@id/menuFragment">
+    <fragment
+        android:id="@+id/menuFragment"
+        android:name="com.miso.vinilosapp.ui.menu"
+        android:label="fragment_menu"
+        tools:layout="@layout/fragment_menu">
+        <action
+            android:id="@+id/action_menuFragment_to_fragment_albums"
+            app:destination="@id/albumFragment"
+            app:launchSingleTop="false" />
+       <action
+            android:id="@+id/action_menuFragment_to_fragment_musician"
+            app:destination="@id/musicianFragment"
+            app:launchSingleTop="false" />
+        <action
+            android:id="@+id/action_menuFragment_to_fragment_collectors"
+            app:destination="@id/collectorFragment"
+            app:launchSingleTop="false" />
+    </fragment>
     <fragment
         android:id="@+id/albumFragment"
         android:name="com.miso.vinilosapp.ui.album"
@@ -19,6 +37,40 @@
         android:label="fragment_albums_detail">
         <argument
             android:name="albumId"
+            app:argType="integer" />
+    </fragment>
+    <fragment
+        android:id="@+id/musicianFragment"
+        android:name="com.miso.vinilosapp.ui.musicians"
+        android:label="fragment_musician"
+        tools:layout="@layout/fragment_musicians">
+        <action
+            android:id="@+id/action_musicianFragment_to_fragment_musicians_detail"
+            app:destination="@id/fragment_musicians_detail" />
+    </fragment>
+    <fragment
+        android:id="@+id/fragment_musicians_detail"
+        android:name="com.miso.vinilosapp.ui.fragment_musicians_detail"
+        android:label="fragment_musicians_detail">
+        <argument
+            android:name="Id"
+            app:argType="integer" />
+    </fragment>
+    <fragment
+        android:id="@+id/collectorFragment"
+        android:name="com.miso.vinilosapp.ui.collectors"
+        android:label="fragment_collectors"
+        tools:layout="@layout/fragment_collectors">
+        <action
+            android:id="@+id/action_collectorFragment_to_fragment_collectors_detail"
+            app:destination="@id/fragment_collectors_detail" />
+    </fragment>
+    <fragment
+        android:id="@+id/fragment_collectors_detail"
+        android:name="com.miso.vinilosapp.ui.collectors_detail"
+        android:label="fragment_collectors_detail">
+        <argument
+            android:name="Id"
             app:argType="integer" />
     </fragment>
 </navigation>
