--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -3,36 +3,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#343F4B"
-    tools:context=".musicians">
+    tools:context=".menu">
 
     <!-- TODO: Update blank fragment layout -->
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="183dp"
-        android:layout_height="269dp"
-        android:progressTint="#4CAF50"
-        android:visibility="visible"
-        tools:visibility="visible" />
-
     <TextView
         android:id="@+id/textAlbumsTitle"
         android:layout_width="408dp"
         android:layout_height="wrap_content"
-        android:text="Musicians"
+        android:text="Menú"
         android:textAppearance="@style/TextAppearance.AppCompat.Display3"
         android:textColor="#F95F62"
         android:textStyle="italic" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/musiciansRv"
+    <Button
+        android:id="@+id/buttonAlbums"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
-        android:background="#343F4B"
-        android:visibility="visible"
-        tools:listitem="@layout/musician_item" />
+        android:text="Albums" />
+
+    <Button
+        android:id="@+id/buttonMusicians"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="110dp"
+        android:text="Musicians" />
+
+    <Button
+        android:id="@+id/buttonCollectors"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="150dp"
+        android:text="Collectors" />
 
 </FrameLayout>
