--- a/app/src/main/res/layout/fragment_collectors.xml
+++ b/app/src/main/res/layout/fragment_collectors.xml
@@ -9,18 +9,27 @@
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="135dp"
+        android:layout_height="112dp"
         android:progressTint="#4CAF50"
         android:visibility="visible"
         tools:visibility="visible" />
 
+    <TextView
+        android:id="@+id/textAlbumsTitle"
+        android:layout_width="408dp"
+        android:layout_height="wrap_content"
+        android:text="Collectors"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
+        android:textColor="#F95F62"
+        android:textStyle="italic" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/collectorsRv"
-        android:layout_width="327dp"
+        android:layout_width="match_parent"
         android:layout_height="473dp"
         android:background="#343F4B"
         android:visibility="visible"
-        tools:listitem="@layout/musician_item" />
+        tools:listitem="@layout/collectors_item" />
 
 </FrameLayout>
