--- a/app/src/main/res/layout/collectors_item.xml
+++ b/app/src/main/res/layout/collectors_item.xml
@@ -9,11 +9,13 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#343F4B">
 
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#343F4B"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +24,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:background="#343F4B"
                 android:orientation="vertical">
 
@@ -33,22 +36,6 @@
                     android:text="@{collector.name}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                     android:textColor="#F8FFFFFF" />
-
-                <TextView
-                    android:id="@+id/tvCollectorEmail"
-                    android:layout_width="match_parent"
-                    android:layout_height="63dp"
-                    android:text="@{collector.email}"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                    android:textColor="#E9361E" />
-
-                <TextView
-                    android:id="@+id/tvCollectorTelephone"
-                    android:layout_width="match_parent"
-                    android:layout_height="58dp"
-                    android:text="@{collector.telephone}"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                    android:textColor="#E9361E" />
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
