--- a/app/src/main/res/layout/fragment_collectors.xml
+++ b/app/src/main/res/layout/fragment_collectors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,16 +10,16 @@
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
-        android:layout_width="135dp"
-        android:layout_height="112dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:progressTint="#4CAF50"
         android:visibility="visible"
         tools:visibility="visible" />
 
     <TextView
-        android:id="@+id/textAlbumsTitle"
-        android:layout_width="408dp"
-        android:layout_height="wrap_content"
+        android:id="@+id/textCollectorsTitle"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:text="Collectors"
         android:textAppearance="@style/TextAppearance.AppCompat.Display3"
         android:textColor="#F95F62"
@@ -27,9 +28,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/collectorsRv"
         android:layout_width="match_parent"
-        android:layout_height="473dp"
+        android:layout_height="match_parent"
+        android:animateLayoutChanges="false"
         android:background="#343F4B"
         android:visibility="visible"
         tools:listitem="@layout/collectors_item" />
+
 
 </FrameLayout>
