--- a/app/src/main/res/layout/album_item.xml
+++ b/app/src/main/res/layout/album_item.xml
@@ -7,58 +7,47 @@
         <variable name="album" type="com.miso.vinilosapp.models.Album"/>
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="150dp"
+        android:layout_marginTop="16dp"
+        android:background="#343F4B"
+        android:orientation="horizontal">
 
-        <com.google.android.material.card.MaterialCardView
+        <ImageView
+            android:id="@+id/iVCoverAlbum"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            app:srcCompat="@android:drawable/ic_menu_slideshow" />
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:strokeWidth="1dp">
+            android:layout_height="match_parent"
+            android:background="#343F4B"
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#343F4B"
-                android:orientation="vertical">
+            <TextView
+                android:id="@+id/textAName"
+                android:layout_marginTop="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:text="@{album.name}"
+                android:textSize="25sp"
+                android:layout_gravity="center"
+                android:textColor="#F8FFFFFF"
+                tools:text="Nombre Album" />
 
-                <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="match_parent"
-                    android:layout_height="141dp"
-                    android:adjustViewBounds="false"
-                    android:backgroundTintMode="src_in"
-                    android:cropToPadding="false"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/ic_launcher_background"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintDimensionRatio="1:1"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintWidth_percent=".3"
-                    tools:srcCompat="@android:drawable/ic_menu_gallery" />
-
-                <TextView
-                    android:id="@+id/textView6"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@{album.name}"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-                    android:textColor="#F8FFFFFF" />
-
-                <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@{album.genre}"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                    android:textColor="#E9361E" />
-
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/textAlbumGenre"
+                android:layout_width="wrap_content"
+                android:textSize="14sp"
+                android:layout_height="wrap_content"
+                android:text="@{album.description}"
+                tools:text="info genre"
+                android:layout_marginStart="10dp"
+                android:textColor="@color/white"
+                />
+        </LinearLayout>
+    </LinearLayout>
 </layout>
