--- a/app/src/main/res/layout/fragment_albums.xml
+++ b/app/src/main/res/layout/fragment_albums.xml
@@ -7,31 +7,11 @@
     android:visibility="visible"
     tools:context=".album">
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
-        android:layout_width="103dp"
-        android:layout_height="wrap_content"
-        android:progressDrawable="@android:drawable/ic_popup_sync"
-        android:progressTint="#4CAF50"
-        android:visibility="visible"
-        tools:visibility="visible" />
-
-    <TextView
-        android:id="@+id/textAlbumsTitle"
-        android:layout_width="408dp"
-        android:layout_height="wrap_content"
-        android:text="Albums"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
-        android:textColor="#F95F62"
-        android:textStyle="italic" />
-
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/albumsRv"
+        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
-        android:layout_height="537dp"
-        android:layout_marginTop="70dp"
+        android:layout_height="match_parent"
         android:background="#343F4B"
         android:visibility="visible"
         tools:listitem="@layout/album_item" />
