--- a/app/src/main/res/layout/fragment_collectors.xml
+++ b/app/src/main/res/layout/fragment_collectors.xml
@@ -7,31 +7,14 @@
     tools:context=".collectors">
 
     <!-- TODO: Update blank fragment layout -->
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:progressTint="#4CAF50"
-        android:visibility="visible"
-        tools:visibility="visible" />
-
-    <TextView
-        android:id="@+id/textCollectorsTitle"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Collectors"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
-        android:textColor="#F95F62"
-        android:textStyle="italic" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/collectorsRv"
         android:layout_width="match_parent"
+        android:layout_marginTop="50dp"
         android:layout_height="match_parent"
         android:animateLayoutChanges="false"
         android:background="#343F4B"
-        android:visibility="visible"
         tools:listitem="@layout/collectors_item" />
 
 
