--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -9,47 +9,46 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <TextView
-        android:id="@+id/textAlbumsTitle"
-        android:layout_width="408dp"
-        android:layout_height="wrap_content"
-        android:text="Menú"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
-        android:textColor="#F95F62"
-        android:textStyle="italic"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <Button
-        android:id="@+id/buttonAlbums"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Albums"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textAlbumsTitle"
-        app:layout_constraintVertical_bias="0.118"
-        tools:layout_editor_absoluteX="-16dp" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="50dp"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/buttonMusicians"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Musicians"
-        app:layout_constraintBottom_toTopOf="@+id/buttonCollectors"
-        app:layout_constraintTop_toBottomOf="@+id/buttonAlbums"
-        app:layout_constraintVertical_bias="0.453"
-        tools:layout_editor_absoluteX="0dp" />
+        <Button
+            android:id="@+id/buttonAlbums"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Albums"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.077" />
 
-    <Button
-        android:id="@+id/buttonCollectors"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Collectors"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textAlbumsTitle"
-        app:layout_constraintVertical_bias="0.4"
-        tools:layout_editor_absoluteX="0dp" />
+        <Button
+            android:id="@+id/buttonMusicians"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Musicians"
+            app:layout_constraintBottom_toTopOf="@+id/buttonCollectors"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonAlbums" />
+
+        <Button
+            android:id="@+id/buttonCollectors"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Collectors"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
