--- a/app/src/main/res/layout/collectors_item.xml
+++ b/app/src/main/res/layout/collectors_item.xml
@@ -19,7 +19,7 @@
             android:background="#343F4B"
             android:orientation="vertical">
             <TextView
-                android:id="@+id/textMName"
+                android:id="@+id/textCName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
