--- a/app/src/main/res/layout/musician_item.xml
+++ b/app/src/main/res/layout/musician_item.xml
@@ -14,7 +14,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/iVCoverAlbum"
+            android:id="@+id/iVCoverMusician"
             android:layout_width="150dp"
             android:layout_height="150dp"
             app:srcCompat="@android:drawable/ic_menu_slideshow" />
