--- a/app/src/main/res/layout/musician_item.xml
+++ b/app/src/main/res/layout/musician_item.xml
@@ -30,6 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:layout_marginStart="10dp"
                 android:text="@{musician.name}"
                 android:textColor="#80CBC4"
                 android:textSize="20sp"
