--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -38,6 +38,30 @@
         <argument
             android:name="albumId"
             app:argType="integer" />
+        <argument
+            android:name="name"
+            app:argType="string"
+            android:defaultValue='""' />
+        <argument
+            android:name="cover"
+            app:argType="string"
+            android:defaultValue='""' />
+        <argument
+            android:name="releaseDate"
+            app:argType="string"
+            android:defaultValue='""' />
+        <argument
+            android:name="description"
+            app:argType="string"
+            android:defaultValue='""' />
+        <argument
+            android:name="genre"
+            app:argType="string"
+            android:defaultValue='""' />
+        <argument
+            android:name="recordLabel"
+            app:argType="string"
+            android:defaultValue='""' />
     </fragment>
     <fragment
         android:id="@+id/musicianFragment"
