--- a/app/src/main/res/layout/fragment_albums_detail.xml
+++ b/app/src/main/res/layout/fragment_albums_detail.xml
@@ -13,8 +13,8 @@
 
     <ImageView
         android:id="@+id/iVCoverAlbum"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
         android:layout_gravity="center"
         android:layout_marginTop="16dp"
         app:srcCompat="@android:drawable/ic_menu_slideshow" />
@@ -27,18 +27,18 @@
         tools:text="NOMBRE DEL ALBUM"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="2dp"
         android:textColor="@color/white"
         />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="5dp"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="90dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="6dp"
             android:orientation="horizontal">
 
             <TextView
@@ -53,12 +53,12 @@
 
             <TextView
                 android:id="@+id/textAlbumDescription"
-                android:layout_width="wrap_content"
-                android:textSize="20sp"
-                android:layout_marginStart="50dp"
+                android:layout_width="230dp"
                 android:layout_height="wrap_content"
-                tools:text="info description"
-                android:textColor="@color/white" />
+                android:layout_marginStart="5dp"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                tools:text="info description" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -72,7 +72,7 @@
                 android:textColor="@color/teal_700"
                 android:textSize="25sp"
                 android:textStyle="bold"
-                android:text="Genre :"
+                android:text="Genre : "
                 tools:text="Genre : " />
 
             <TextView
@@ -131,6 +131,27 @@
                 tools:text="info ReleaseDate"
                 android:textColor="@color/white"
                 />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Tracks"
+                android:textColor="@android:color/holo_red_light"
+                android:textSize="15sp" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/albumTracksRv"
+                android:layout_marginTop="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#343F4B"
+                android:visibility="visible"
+                tools:listitem="@layout/track_item" />
+
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
