--- a/app/src/main/res/layout/fragment_collectors_detail.xml
+++ b/app/src/main/res/layout/fragment_collectors_detail.xml
@@ -1,15 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginTop="70dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#343F4B"
+    android:orientation="vertical"
     tools:context=".collectors_detail">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
+        android:orientation="vertical">
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/textCollectorName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/teal_700"
+            android:layout_marginStart="10dp"
+            android:textSize="32sp"
+            android:text="NOMBRE COLLECCIONISTA"
+            tools:text="NOMBRE COLLECCIONISTA" />
+
+        <TextView
+            android:id="@+id/textCollectorEmail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:textColor="@color/white"
+            android:layout_marginTop="40dp"
+            android:textSize="25sp"
+            android:text="email - collector"
+            tools:text="email - collector" />
+
+        <TextView
+            android:id="@+id/textCollectorTelephone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="3dp"
+            android:textColor="@color/white"
+            android:layout_marginTop="15dp"
+            android:textSize="25sp"
+            android:text="telephone - collector"
+            tools:text="telephone - collector" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/textViewMusicianAlbum"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:text="Comments"
+                android:textColor="@color/teal_700"
+                android:textSize="25sp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/collectorCommentRv"
+                android:layout_marginTop="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#343F4B"
+                android:visibility="visible"
+                tools:listitem="@layout/comment_item" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+</LinearLayout>
