--- a/app/src/main/res/navigation/nav_graph_collectors.xml
+++ b/app/src/main/res/navigation/nav_graph_collectors.xml
@@ -19,8 +19,25 @@
         android:name="com.miso.vinilosapp.ui.collectors_detail"
         android:label="fragment_collectors_detail">
         <argument
-            android:name="Id"
+            android:name="id"
             app:argType="integer" />
+        <argument
+            android:name="name"
+            app:argType="string"
+            android:defaultValue='""' />
+        <argument
+            android:name="telephone"
+            app:argType="string"
+            android:defaultValue='""' />
+        <argument
+            android:name="email"
+            app:argType="string"
+            android:defaultValue='""' />
+        <argument
+            android:name="comments"
+            app:argType="com.miso.vinilosapp.models.Comment[]"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
 
 </navigation>
