Solucion de problemas en el detalle del coleccionista

--- a/app/src/main/res/layout/fragment_collectors_detail.xml
+++ b/app/src/main/res/layout/fragment_collectors_detail.xml
@@ -23,7 +23,6 @@
             android:textColor="@color/teal_700"
             android:layout_marginStart="10dp"
             android:textSize="32sp"
-            android:text="NOMBRE COLLECCIONISTA"
             tools:text="NOMBRE COLLECCIONISTA" />
 
         <TextView
@@ -55,10 +54,10 @@
             android:orientation="vertical">
             <TextView
                 android:id="@+id/textViewMusicianAlbum"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
                 android:text="Comments"
+                android:layout_gravity="center_horizontal"
                 android:textColor="@color/teal_700"
                 android:textSize="25sp" />
 
