--- a/app/src/main/res/layout/musician_item.xml
+++ b/app/src/main/res/layout/musician_item.xml
@@ -17,7 +17,8 @@
             android:id="@+id/iVCoverMusician"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            app:srcCompat="@android:drawable/ic_menu_slideshow" />
+            app:srcCompat="@android:drawable/ic_menu_slideshow"
+            android:contentDescription="Imagen del musico" />
 
         <LinearLayout
             android:layout_width="match_parent"
