--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.373"/>
+        app:layout_constraintVertical_bias="0.373"
+        android:contentDescription="Aplicacion para coleccionistas musicales" />
 
     <Button
         android:id="@+id/button"
@@ -41,5 +42,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.291"
-        app:srcCompat="@drawable/captura_de_pantalla_2021_11_03_a_la_s__10_41_00_p__m_" />
+        app:srcCompat="@drawable/captura_de_pantalla_2021_11_03_a_la_s__10_41_00_p__m_"
+        android:contentDescription="Aplicacion para coleccionistas musicales" />
 </androidx.constraintlayout.widget.ConstraintLayout>
